<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tortoisebot_ros2_docker</name>
  <version>0.1.0</version>
  <description>Docker-specific Tortoisebot files.</description>
  <maintainer email="chatzialex@yahoo.gr">user</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>tortoisebot_slam</exec_depend>
  <exec_depend>tortoisebot_navigation</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
